# surframe

./: .dockerignore  .env.example  .gitignore  BUSINESS.md  CHANGELOG_0.2.0.md  Dockerfile  HIS_TODO.md  MARKETING.md  PRIVACY.md  PROSPECTS.md  README.md  TERMS.md  THREAT_MODEL.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
cli/: surx.py
docs/: API.md  POST_SKELETON_EN.md  SELF_HOSTING.md
examples/: provenance_demo.py
launch/: POSTS.md
registry/: __init__.py  app.py  bootstrap.py  core.py  db.py  requirements.txt  signer.py  tsa.py
registry/tests/: test_registry.py
site/: ai-act.html  index.html
surframe/: __init__.py  advise.py  audit.py  crypto.py  export_aiact.py  io.py  license.py  manifest.py  plugins.py  registry.py  registry_client.py  security.py  signing.py
surframe/ann/: __init__.py  flat.py
surframe/formats/: csv_detect.py
surframe/indexes/: ann.py  bloom.py  hll.py  minmax.py
surframe/sf_codecs/: cat.py  num.py  ts.py
surx-verify-action/: README.md  action.yml
tests/: test_export_aiact.py  test_v020.py
