[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "surframe"
version = "0.3.4"
description = "SURFRAME toolkit & SURX container (signed, encrypted, auditable semantic container)"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Christ10-8"}]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1", "pyarrow>=15", "numpy>=1.26", "typer>=0.12.3",
  "xxhash>=3.4.1", "python-dateutil>=2.8.2", "cryptography>=42",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Christ10-8/surframe"
Repository = "https://github.com/Christ10-8/surframe"
Issues = "https://github.com/Christ10-8/surframe/issues"

[project.scripts]
surx = "cli.surx:main"

[tool.setuptools.packages.find]
include = ["surframe*", "cli*"]